# creeper-url-shortening-web-server

./: .gitignore  CMakeLists.txt  Makefile  README.md  dev_config  my_config  redis.conf  server_config
cmake/: CodeCoverageReportConfig.cmake
data/: test.html
data/web/: shorten.css  shorten.html  shorten.js
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: blocking_request_handler.h  config_parser.h  crud_request_handler.h  database_connection_pool.h  echo_request_handler.h  echo_response.h  file_entity_storage.h  health_request_handler.h  http_header.h  idatabase_client.h  ientity_storage.h  iredis_client.h  isession.h  logging.h  not_found_request_handler.h  real_database_client.h  real_entity_storage.h  real_redis_client.h  redis_connection_pool.h  registry.h  request_handler.h  request_handler_dispatcher.h  request_handler_echo.h  request_parser.h  server.h  session.h  shorten_request_handler.h  sim_entity_storage.h  static_request_handler.h
src/: blocking_request_handler.cc  config_parser.cc  crud_request_handler.cc  database_connection_pool.cc  echo_request_handler.cc  echo_response.cc  file_entity_storage.cc  health_request_handler.cc  http_header.cc  logging.cc  not_found_request_handler.cc  real_database_client.cc  real_entity_storage.cc  real_redis_client.cc  redis_connection_pool.cc  registry.cc  request_handler.cc  request_handler_dispatcher.cc  request_handler_echo.cc  request_parser.cc  server.cc  server_main.cc  session.cc  shorten_request_handler.cc  sim_entity_storage.cc  static_request_handler.cc
tests/: blocking_request_handler_test.cc  comment_config  config_parser_test.cc  crud_request_handler_test.cc  echo_request_handler_test.cc  echo_response_test.cc  example_config  file_entity_storage_test.cc  health_request_handler_test.cc  http_header_test.cc  integration_test.py  logging_test.cc  mock_config  not_found_request_handler_test.cc  real_entity_storage_test.cc  real_redis_client_test.cc  registry_test.cc  request_handler_dispatcher_test.cc  request_handler_echo_test.cc  request_parser_test.cc  server_concurrency_test.cc  server_test.cc  session_test.cc  shorten_request_handler_test.cc  sim_entity_storage_test.cc  static_request_handler_test.cc  stress_test.py  unclosed_block_config2
tests/config_testcases/: absolute_root_path  block_after_semicolon_config  comment_config  duplicate_handlers  echo_handler_on_root  empty_block_config  extra_semicolon_config  invalid_absolute_root_path  invalid_echo_config  invalid_not_found_handler  invalid_path  invalid_port_config  invalid_static_config  missing_semicolon_config  multiple_handlers  nested_block_config  not_found_handler  simple_config  single_quote_config  trailing_slash  unclosed_block_config  unclosed_block_config2  unclosed_single_quote_config
tests/dispatcher_testcases/: absolute_root_path  add_echo_handler  add_multiple_handler  blocking_handler  duplicate_handlers  echo_handler  echo_with_trailing_slashes_handler  invalid_handler  invalid_handler_format  invalid_handler_type  invalid_static_file_path  missing_root_keyword  missing_root_path  multiple_handlers  no_handler_type  quoted_path  quoted_root_path  static_handler
tests/integration_testcases/: crud_config  simple_config  static_config  url_shortener_config
tests/request_handler_testcases/: crud_config_absolute_path  crud_config_invalid_path  crud_config_missing_path  crud_config_path_not_exist_absolute  crud_config_path_not_exist_relative  crud_config_relative_path  crud_config_trailing_slash  invalid_echo_config  invalid_health_config  invalid_not_found_config  static_config_absolute_root  static_config_invalid_root  static_config_missing_root  static_config_path_not_exist_absolute  static_config_path_not_exist_relative  static_config_relative_root  static_config_trailing_slash  valid_echo_config  valid_health_config  valid_not_found_config
